fixing sass layout issues for search

--- a/public/css/_search.scss
+++ b/public/css/_search.scss
@@ -30,9 +30,12 @@
   }
 }
 
-.search-panel-message.fadeout {
-  transition: font-size 2s, margin-top 1s, opacity 2s;
-  margin-top: -20px;
-  font-size: 0;
-  opacity: 0;
+.search-panel-message {
+  transition: all 2s;
+
+  &.fadeout {
+    margin-top: -15px;
+    font-size: 0;
+    opacity: 0;
+  }
 }
