--- a/public/css/_service.scss
+++ b/public/css/_service.scss
@@ -1,4 +1,4 @@
-.service-home .search-area {
+.search-area {
   margin-top: 0;
 
   .service-name {
